# pyErosivity

./: .gitignore  .zenodo.json  README.md  environment.yml  pyproject.toml  test_bootstrapping.py  test_bootstrapping_CPM.py  test_erosivity.py
examples/: 00_export_5min_to_RIST_input.py  01_example_RISTvsPyErosivity_only_Imax30.py  02_example_depth_vs_imax.py  03_example_calibration.py  04_example_bootstrapping.py  debug_renard_split.py  export_5min_to_RIST_input.py  test_bootstrapping.py  test_bootstrapping_CPM.py  test_erosivity.py
res/: RIST_VE_0091_Erosive_Events_5minutes.txt  RIST_VE_0091_Erosive_Events_5minutes_imax15.txt  RIST_VE_0091_Erosive_Events_5minutes_imax30.txt  VE_0091_1h_flag.parguqet.gzip  VE_0091_ETH_hist.csv  randy.txt
src/: pyErosivity.py
