[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyErosivity"
version = "0.0.1"
requires-python = ">=3.11"
]

description = "pyErosivity"
readme = "README.rst"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11.5",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
authors = [
   {name = "Petr Vohnicky", email = "petr.vohnicky@unipd.it"},
]

[project.urls]
url = "https://github.com/PetrVey/pyErosivity"

[tool.setuptools]
package-dir = {"" = "src"}
